--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+#default loggig level is info
 logging.level.org.springframework=info
+
+#deafult actuator return only health info, to return more information
+management.endpoints.web.exposure.include=*
+
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+
+# used to defer(making it to execute late) the execution of data.sql  
+spring.jpa.deferdatasource-initialization=true
+
+spring.jpa.show-sql=true
+
+
+#default username is user and pwd is generated on restarting the server, to set our own username and pwd
+spring.security.user.name=srihan
+spring.security.user.password=password
+ 
+
+
+
+
