--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -17,6 +17,12 @@ spring.jpa.show-sql=true
 #default username is user and pwd is generated on restarting the server, to set our own username and pwd
 spring.security.user.name=srihan
 spring.security.user.password=password
+
+#activating profile
+spring.profiles.active=dev2
+
+
+
  
 
 
